# agentwatch

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICES.txt  README.md  mypy.ini  pyproject.toml  run_ui.sh  setup.cfg  setup.py
examples/: autogen_example.py  crewi_example.py  example.py  langgraph_example.py  mcp_example.py  openai_async.py  weather_example.py
examples/mcp/: mcp_client.py  mcp_server.py
src/agentspy/: __init__.py  cli.py  client.py  consts.py  core.py  enums.py  event_processor.py  models.py  pipes.py  protos.py
src/agentspy/graph/: enums.py  graph.py  models.py
src/agentspy/hooks/: models.py
src/agentspy/hooks/http/: http_base_hook.py  httpcore_hook.py  models.py
src/agentspy/llm/: anthropic_models.py  models.py  ollama_models.py  openai_models.py
src/agentspy/processing/: base.py  http_processing.py
src/agentspy/processing/normalizer/: ndjson_normalizer.py
src/agentspy/visualization/: app.py  models.py  server.py
src/agentspy/visualization/frontend/: App.tsx  index.css  package-lock.json  package.json
src/agentspy/webhooks/: handler.py  models.py
src/agentwatch/: __init__.py  cli.py  client.py  consts.py  core.py  event_processor.py  models.py  pipes.py  protos.py  singleton.py
src/agentwatch/graph/: graph.py  models.py
src/agentwatch/hooks/: base.py  models.py
src/agentwatch/hooks/http/: http_async_iterator.py  http_base_hook.py  httpcore_hook.py
src/agentwatch/llm/: __init__.py  anthropic_models.py  jsonrpc_models.py  models.py  ollama_models.py  openai_models.py
src/agentwatch/processing/: base.py  http_processing.py
src/agentwatch/processing/normalizer/: base.py  event_stream_normalizer.py  ndjson_normalizer.py
src/agentwatch/visualization/: app.py  models.py  server.py
src/agentwatch/webhooks/: handler.py  models.py
src/spyllm/: __init__.py  cli.py  client.py  core.py  enums.py  event_processing.py  event_processor.py  models.py  pipes.py  protos.py  spyllm.py
src/spyllm/graph/: consts.py  enums.py  graph.py  models.py
src/spyllm/hooks/: models.py
src/spyllm/llm/: __init__.py  anthropic_models.py  enums.py  models.py  ollama_models.py  openai_models.py
src/spyllm/processing/: base.py  http_processing.py
src/spyllm/utils/: custom_logging_formatter.py
src/spyllm/visualization/: app.py  models.py  server.py
src/spyllm/webhooks/: enums.py  handler.py  models.py
tests/: test_agentspy.py  test_agentspy_client.py  test_agentwatch.py  test_agentwatch_client.py  test_core.py  test_http_processor.py  test_httpcore_hook.py  test_pipes.py  test_spyllm.py  test_spyllm_client.py
(+18 files in other folders)
