[metadata]
name = spyllm
version = 1.0.0
description = Platform agnostic Agentic AI runtime observability framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Shai Dvash
author_email = shai.dvash@cyberark.com
url = https://github.com/cyberark/spyllm
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    asyncio
    typing-extensions

[options.packages.find]
where = src